--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,10 @@ numpy = "*"
 pandas = "*"
 scrapy = "*"
 pytest = "*"
+scikit-learn = "*"
 
 [dev-packages]
+ipykernel = "*"
 
 [requires]
 python_version = "3.10"
